k8s/metrixer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrixer
  labels:
    app: metrixer
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrixer
  template:
    metadata:
      labels:
        app: metrixer
      namespace: test
    spec:
      containers:
        - name: metrixer
          image: mmacphail/metrixer:1.0.1
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
---
apiVersion: v1
kind: Service
metadata:
  name: metrixer-service
  namespace: test
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app: metrixer
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrixer-ingress
  namespace: test
  annotations:
    cert-manager.io/issuer: ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - metrixer.cluster.local
      secretName: metrixer-ingress-cert
  rules:
    - host: metrixer.cluster.local
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: metrixer-service
                port:
                  number: 80
